...
            android:backgroundTint="@color/beige"
            android:layout_marginRight="40dp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Confirm"
        android:backgroundTint="@color/green"
        android:layout_gravity="center"/>

...
