...
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry">
        </TextView>
    </LinearLayout>

    <ImageButton
        android:id="@+id/add_item_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="-6dp"
...
