...
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/estimated_val_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/photo_button"
        android:layout_marginTop="15dp"
        app:cornerRadius="0dp"
        android:backgroundTint="@color/darkBrown"
        android:layout_marginHorizontal="16dp"/>

    <com.google.android.material.button.MaterialButton
...
        android:background="@color/darkBrown"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/edit_tag_button"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="16dp"
            android:src="@drawable/tags_svgrepo"
            android:scaleType="fitCenter"
...
