<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/beige">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tag_title_bar">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tags_title"
            android:background="@color/darkBrown"
            android:textSize="40sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">
        </TextView>

        <ImageButton
            android:id="@+id/tag_back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/green"
            android:src="@drawable/tag_cancel_fragment"
            app:tint="@color/white" />

    </RelativeLayout>
    <ListView
        android:id="@+id/tag_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:dividerHeight="0dp"
        android:drawSelectorOnTop="false"
        android:cacheColorHint="@android:color/transparent"
        android:listSelector="@android:color/transparent"
        android:background="@color/gray"></ListView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/tag_edittext"
            android:textSize="20dp"
            android:hint="@string/tag_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:maxWidth="240dp"
            android:maxLength="15"
            android:maxLines="1">
        </EditText>

        <ImageButton
            android:id="@+id/tag_create_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignRight="@+id/tag_edittext"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/green"
            android:src="@drawable/tag_add_circle"
            app:tint="@color/white" />
    </RelativeLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag_confirm"
        android:textSize="20dp"
        android:id="@+id/tag_apply_button"
        android:layout_gravity="center"
        app:cornerRadius="0dp"
        android:backgroundTint="@color/selected"/>
    <Button
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag_confirm"
        android:id="@+id/TEMP_tag_apply_button"
        android:layout_gravity="center"
        android:backgroundTint="@color/green">
    </Button>

    <TextView
        android:text="Delete: Sample?"
        android:id="@+id/delete_prompt_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:textSize="20dp"
        android:textColor="@color/black"></TextView>

    <LinearLayout
        android:id="@+id/tag_deletion_views"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:layout_toRightOf="@+id/no_action_button"
            android:id="@+id/delete_button"
            android:layout_marginRight  ="20dp"
            android:text="Delete"
            android:textSize="20dp"
            app:cornerRadius="0dp"
            android:backgroundTint="@color/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/no_action_button"
            android:layout_width="wrap_content"
            app:cornerRadius="0dp"
            android:text="Cancel"
            android:textSize="20dp"
            android:backgroundTint="@color/green"
            android:layout_height="wrap_content"/>



    </LinearLayout>



</LinearLayout>