...
    </string-array>

    <string-array name="order_array">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string name="tags_title">TAGS</string>


    <string name="delete">Delete</string>
    <string name="selectItems">Selected Items : 0</string>
    <string name="selectAll">Select all</string>
    <string name="deleteSelectedItems">Delete selected items</string>
...
